--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -191,19 +191,17 @@ jobs:
           LEAGUE_ID_NAME: ${{ env.LEAGUE_ID_NAME }}
         run: |
           import json
+          import os  # <-- Add this line
           from datetime import datetime, timedelta
 
           LEAGUE_ID_NAME = os.environ.get('LEAGUE_ID_NAME')
 
           def create_epg():
               try:
-                  # --- THIS IS THE FIX ---
-                  # We need to open the files first
                   with open('data/standings.json', 'r') as f:
                       standings_data = json.load(f)['response'][0]['league']['standings'][0]
                   with open('data/fixtures.json', 'r') as f:
                       fixtures_data = json.load(f)
-                  # -----------------------
               except (IOError, KeyError, IndexError):
                   print("❌ Standings or fixtures data not found. Cannot generate EPG.")
                   return
@@ -213,7 +211,9 @@ jobs:
               # 1. Define channels (teams)
               for team in standings_data:
                   team_name = team['team']['name']
-                  team_slug = team_name.lower().replace(' ', '-').replace('&', 'and') # handle '&'
+                  # Sanitize name for XML id
+                  team_slug = team_name.lower().replace('&', 'and').replace(' ', '-')
+                  team_slug = ''.join(c for c in team_slug if c.isalnum() or c == '-')
                   xml += f'\n  <channel id="{team_slug}.uk">'
                   xml += f'\n    <display-name lang="en">{team_name}</display-name>'
                   xml += '\n  </channel>'
@@ -222,8 +222,10 @@ jobs:
               for fixture in fixtures_data:
                   home_team = fixture['home_team']
                   away_team = fixture['away_team']
-                  home_slug = home_team.lower().replace(' ', '-').replace('&', 'and')
-                  away_slug = away_team.lower().replace(' ', '-').replace('&', 'and')
+                  home_slug = home_team.lower().replace('&', 'and').replace(' ', '-')
+                  home_slug = ''.join(c for c in home_slug if c.isalnum() or c == '-')
+                  away_slug = away_team.lower().replace('&', 'and').replace(' ', '-')
+                  away_slug = ''.join(c for c in away_slug if c.isalnum() or c == '-')
                   
                   dt_start = datetime.fromisoformat(fixture['datetime_utc'])
                   dt_stop = dt_start + timedelta(hours=2) # Assume 2 hour duration
